syntax = "proto3";

package teacher_service;

service TeacherService {
    rpc TeacherCreate(Teacher) returns (TeacherResp);
    rpc TeacherPasswordUpdate(PasswordUpdate) returns (PasswordResp);
    rpc TeacherGet(ByIdReq) returns (TeacherResp);
    rpc TeacherSignUp(Token) returns (TeacherResp);
    rpc TeacherList(ListReq) returns (TeacherListResp);
    rpc TeacherLogin(LoginReq) returns (TeacherLoginResp);
    rpc TeacherUpdate(Teacher) returns (TeacherResp);
    rpc TeacherDelete(ByIdReq) returns (EmptyRes);

    rpc TeacherSalaryCreate(TeacherSalary) returns (TeacherSalary);
    rpc TeacherSalaryGet(ByIdReq) returns (TeacherSalary);
    rpc TeacherSalaryList(SalaryReq) returns (TeacherSalaryListResp);
    rpc TeacherSalaryUpdate(TeacherSalary) returns (TeacherSalary);
    rpc TeacherSalaryDelete(ByIdReq) returns (EmptyRes);

    rpc TeacherByName (TTT) returns (NameResp);
}

message EmptyRes{}

message TTT{
    string permission = 1;
}

message Name{
    string id = 1;
    string name = 2;
}

message NameResp{
    repeated Name teacher = 1;
}

message PasswordUpdate{
    string id = 1;
    string password = 2;
}

message PasswordResp{
    bool status = 1;
}

message Teacher{
    string id = 1;
    string full_name = 2;
    string password = 3;
    string email = 4;
    string birthday = 5;
    string gender = 6;
    string phone1 = 7;
    string phone2 = 8;
    string permission = 9;
    string working_day = 10;
    string address = 11;
    string passport_series = 12;
    string passport_image1 = 13;
    string passport_image2 = 14;
    string image = 15;
    string branch_id = 16;
    string direction_id = 17;
}

message TeacherResp{
    string id = 1;
    string full_name = 2;
    string email = 3;
    string birthday = 4;
    string gender = 5;
    string phone1 = 6;
    string phone2 = 7;
    string permission = 8;
    string working_day = 9;
    string address = 10;
    string passport_series = 11;
    string passport_image1 = 12;
    string passport_image2 = 13;
    string image = 14;
    Name branch_id = 15;
    Name direction_id = 16;
    string created_at = 17;
    string updated_at = 18;
}

message TeacherSalary {
    string id = 1;
    string amount = 2;
    string comment = 3;
    string date_of_begin = 4;
    string teacher_id = 5;
    string created_at = 6;
    string updated_at = 7;
}


message TeacherSalaryListResp {
    repeated TeacherSalary salary = 1;
    int64 count = 2;
}


message TeacherLoginResp {
    bool ok = 1;
    string token = 2;
    string whoami = 3;
}

message TeacherListResp {
    repeated TeacherResp teachers = 1;
    int64 count = 2;
}

message LoginReq {
    string email = 1;
    string password = 2;
}

message ListReq {
    string permission = 1;
    int64 page = 2;
    int64 limit = 3;
}

message SalaryReq{
    string id = 1;
}

message Token{
    string token = 1;
}

message ByIdReq {
    string id = 1;
}
